feat(get): add support for user info in URL