@@ -3,6 +3,8 @@ package me.itzg.helpers.get;
 import static org.mockserver.model.HttpRequest.request;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import org.mockserver.integration.ClientAndServer;
 import org.mockserver.matchers.Times;
@@ -11,15 +13,28 @@ import org.mockserver.model.HttpResponse;
 
 class MockServerSupport {
 
-  private ClientAndServer client;
+  private final ClientAndServer client;
 
   public MockServerSupport(ClientAndServer client) {
 
     this.client = client;
   }
 
-  URL buildMockedUrl(String s) throws MalformedURLException {
-    return new URL("http", "localhost", client.getLocalPort(), s);
+  URL buildMockedUrl(String path) throws MalformedURLException {
+    return new URL("http", "localhost", client.getLocalPort(), path);
+  }
+
+  @SuppressWarnings("SameParameterValue")
+  URL buildMockedUrl(String path, String userInfo) throws URISyntaxException, MalformedURLException {
+    return new URI(
+        "http",
+        userInfo,
+        "localhost",
+        client.getLocalPort(),
+        path,
+        null,
+        null
+    ).toURL();
   }
 
   @FunctionalInterface
@@ -31,6 +46,7 @@ class MockServerSupport {
     expectRequest(method, path, request -> request, httpResponse);
   }
 
+  @SuppressWarnings("SameParameterValue")
   void expectRequest(String method, String path, HttpResponse httpResponse, int responseTimes) {
     expectRequest(method, path, request -> request, httpResponse, responseTimes);
   }
